# geyserlite

./: .gitattributes  .gitignore  .markdownlint.yaml  .release-please-config.json  .release-please-manifest.json  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  Taskfile.yml  mise.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/integration-setup/: action.yml
.github/workflows/: ci.yml  native-image.yml  release-please.yml  release.yml
deploy/compose/: README.md  config.yml  docker-compose.yml
docs/: architecture.md  floodgate.md  troubleshooting.md  tuning.md
go/: .golangci.yml  README.md  backoff.go  backoff_test.go  config.go  config_test.go  doc.go  download.go  download_test.go  embed.go  embed_default.go  embed_linux_amd64.go  embed_linux_arm64.go  embed_unsupported.go  embedded.go  embedded_helpers.go  embedded_helpers_test.go  exit_error_test.go  floodgate.go  fly.go  fly_test.go  geyserlite.go  geyserlite_test.go  go.mod  go.sum  internal_test.go  library_test.go  library_unix.go  library_unsupported.go  library_windows.go  locate.go  locate_test.go  options.go  release_workflow_test.go  server.go  subprocess.go  subprocess_other.go  subprocess_test.go  subprocess_unix.go  version.go
go/assets/: README.md
go/cmd/bedrock-probe/: main.go
go/cmd/integration-test/: main.go
go/examples/: README.md
go/examples/basic/: main.go
go/examples/custom-config/: main.go
go/examples/floodgate/: main.go
go/examples/fly/: main.go
go/examples/healthcheck/: main.go
go/integration/gate/: config.go  doc.go  gate.go  gate_test.go
go/internal/synthetic/: bedrock.go  bedrock_test.go
rust/: Cargo.toml  README.md
rust/assets/: README.md
rust/examples/: README.md  basic.rs  custom_config.rs  floodgate.rs  fly.rs  healthcheck.rs  integration_test.rs
rust/src/: backoff.rs  config.rs  download.rs  embed.rs  embedded.rs  error.rs  floodgate.rs  fly.rs  hex.rs  lib.rs  locate.rs  options.rs  paths.rs  server.rs  subprocess.rs  version.rs
scripts/: fetch-embed-assets.sh  floodgate-keygen.sh
