[package]
name = "geyserlite"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Embed GeyserMC's Bedrock-Java translation in Rust programs (in-process via libloading, or as a managed subprocess)"
license = "MIT"
repository = "https://github.com/minekube/geyserlite"
homepage = "https://github.com/minekube/geyserlite"
keywords = ["minecraft", "bedrock", "geyser", "minekube", "graalvm"]
categories = ["network-programming", "external-ffi-bindings"]
readme = "README.md"

[features]
default = []

# Embed libgeyserlite.so via include_bytes! and self-extract on first start.
embed = []

# Auto-download libgeyserlite.so from GitHub Release with checksum verification.
download = ["dep:reqwest", "dep:sha2"]

[dependencies]
tokio = { version = "1", features = ["macros", "process", "signal", "rt-multi-thread", "io-util", "time", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
libloading = "0.8"
thiserror = "2"
rand = "0.9"
tempfile = "3"

# download feature
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
anyhow = "1"

[[example]]
name = "basic"
path = "examples/basic.rs"
